Sampleview can be moved up or down using context menu